# semantic-layer-duckdb-demo

./: .gitignore  README.md  pyproject.toml
demo/: before_after_demo.py  make_data.py  nyc_taxi_demo.yml
